--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
 
   <main class="px-3">
-    <h1>The Blaster master</h1>
+    <h1>Data Science</h1>
     <p class="lead">My portfolio in progress</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
