--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   <main class="px-3">
     <h1>Data Science</h1>
     <p class="lead">My portfolio in progress</p>
-    <p class="lead">
+    <!-- <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-    </p>
+    </p> -->
   </main>
 
   <footer class="mt-auto text-white-50">
